fixed some of the alignment for 'top five' page with titles

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -795,7 +795,7 @@ margin-left: -18.6%;
 /*-------------- Harriet Tubman Demon Slayer Page End----------------------*/
 /*-------------------------Top Five Begin--------------------------------------*/
 .top-five-video {
-  padding-top: 30px;
+  padding-top: 10px;
   padding-right: 30px;
   margin-right: 30px;
 }
